@@ -1,3 +1,9 @@
+2012-06-11  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        Unreviewed. Fix make distcheck issues.
+
+        * GNUmakefile.list.am: Add missing header file.
+
 2012-06-09  Dominic Cooney  <dominicc@chromium.org>
 
         [Chromium] Remove JavaScriptCore dependencies from gyp
